2009-06-21  Zoltan Varga  <vargaz@gmail.com>

	* configure.in (TARGET_BYTE_ORDER): New define containing the byte order of
	the target.

2009-06-18  Marek Habersack  <mhabersack@novell.com>

	* data/browscap.ini: applied Mono modifications to the upstream
	version. Fixes three tests failing in System.Web. Fixes bug #513965
	Added ecmascriptversion, msdomversion and w3cdomversion to the IE
	8.0 entry. Fixes bug #513965

2009-06-16  Raja R Harinath  <harinath@hurrynot.org>

	* configure.in (--with-profile2): Simplify slightly.
	(--with-profile4, --with-moonlight): Likewise.

2009-06-15  Miguel de Icaza  <miguel@novell.com>

	* configure.in: Changed the default to not build the 4.0 profile
	unless explicitly enabled.

2009-06-15  Zoltan Varga  <vargaz@gmail.com>

	* CMakeLists.txt: Add mips support.

2009-06-14  Zoltan Varga  <vargaz@gmail.com>

	* scripts/CMakeLists.txt: New file.

	* samples/CMakeLists.txt: New file, currently empty.

2009-06-12  Andreia Gaita  <avidigal@novell.com>

	* data/config.in: add libcups dllmap entry

2009-06-11  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Disable dtrace support if dtrace doesn't support the
	-h option.

2009-06-10  Marek Safar  <marek.safar@gmail.com>

	* runtime/Makefile.am, configure.in: Make net_4_0 profile optional.

2009-06-07  Marek Safar  <marek.safar@gmail.com>

	* runtime/Makefile.am: Enabled net_4_0 for compilation.

2009-05-27  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Disable USE_MUNMAP on ppc to work around #504411.

2009-05-26  Zoltan Varga  <vargaz@gmail.com>

	* CMakeLists.txt: Implement AC_OUTPUT, creation of config.make, etc.
	
	* CMakeLists.txt: implement arm fpu detection, add vfp detection as
	well.

	* CMakeLists.txt: Add arm support.

2009-05-24  Miguel de Icaza  <miguel@novell.com>

	* Disable mono/docs build if we disabled the mcs build.

2009-05-24  Zoltan Varga  <vargaz@gmail.com>

	* */CMakeLists.txt: Add beginnings of a cmake based build system.
