@@ -1,3 +1,8 @@
+2009-07-02  jonas echterhoff <jonas@unity3d.com>
+
+	* configure.in: Add linker flag on Mac OS X to allow access to other
+	processes, needed for debugging. Enable debugging on OS X.
+	
 2009-06-21  Zoltan Varga  <vargaz@gmail.com>
 
 	* configure.in (TARGET_BYTE_ORDER): New define containing the byte order of
